--- a/blog/src/main/resources/templates/admin/blogs-input.html
+++ b/blog/src/main/resources/templates/admin/blogs-input.html
@@ -207,8 +207,8 @@
         width   : "100%",
         height  : 450,
         syncScrolling : "single",
-        path    : "../../static/lib/editormd/lib/"
-       // path    : "/lib/editormd/lib/"
+        //path    : "../../static/lib/editormd/lib/"
+        path    : "/lib/editormd/lib/"
       });
     });
     $('.menu.toggle').click(function () {
