--- a/blog/src/main/resources/templates/_fragments.html
+++ b/blog/src/main/resources/templates/_fragments.html
@@ -19,7 +19,7 @@
   <div class="ui container">
     <div class="ui inverted secondary stackable menu">
       <h2 class="ui teal header item">Blog</h2>
-      <a href="#" th:href="@{/}" class="m-item item m-mobile-hide m-text-font" th:classappend="${n==1} ? 'active'"><i class="home icon"></i>首页</a>
+      <a href="#" th:href="@{/}" class="m-item item m-mobile-hide m-text-font" th:classappend="${n==1} ? 'active'"><i class="home icon"></i><span th:text="#{nav.index}">首頁</span></a>
       <a href="#" th:href="@{/types/-1}" class="m-item item m-mobile-hide m-text-font" th:classappend="${n==2} ? 'active'"><i class="idea icon"></i>分类</a>
       <a href="#" th:href="@{/tags/-1}" class="m-item item m-mobile-hide m-text-font" th:classappend="${n==3} ? 'active'"><i class="tags icon"></i>标签</a>
       <a href="#" th:href="@{/archives}" class="m-item item m-mobile-hide m-text-font" th:classappend="${n==4} ? 'active'"><i class="clone icon"></i>归档</a>
@@ -37,6 +37,7 @@
   <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
     <i class="sidebar icon"></i>
   </a>
+
 </nav>
 
 
@@ -75,6 +76,8 @@
         <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
         <p class="m-text-thin m-text-spaced m-opacity-mini" th:text="#{index.blogDescription}">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
         <a class="ui inverted header m-text-thin m-text-spaced " href="localhost:8080/admin">後台</a>
+        <a class="m-item item m-mobile-hide" th:href="@{/(l=zh_CN) }">中文</a>
+        <a class="m-item item m-mobile-hide" th:href="@{/(l=zh_US)}">English</a>
       </div>
     </div>
     <div class="ui inverted section divider"></div>
