--- a/blog/src/main/resources/templates/index.html
+++ b/blog/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>首页</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-	<link rel="stylesheet" >
+	<link rel="stylesheet" href="../static/css/me.css">
 </head>
 <body>
 	<!--导航-->
@@ -302,12 +302,6 @@
 								</a>
 								<!--/*-->
 								<a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
-								  论 <div class="detail">23</div>
-								</a>
-								<a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
-								  论 <div class="detail">23</div>
-								</a>
-								<a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
 								  方法论 <div class="detail">23</div>
 								</a>
 								<a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
@@ -322,10 +316,6 @@
 								<a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
 								  方法论 <div class="detail">23</div>
 								</a>
-								<a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
-								  方法论 <div class="detail">23</div>
-								</a>
-								
 								<!--*/-->
 							  </div>
 						</div>
@@ -395,7 +385,7 @@
 			  <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
 			  <div class="ui inverted link list">
 				<a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-				<a href="#" class="item m-text-thin">QQ：865729312</a>
+				<a href="#" class="item m-text-thin">QQ：1979866043</a>
 			  </div>
 			</div>
 			<div class="seven wide column">
