--- a/blog/src/main/resources/templates/tags.html
+++ b/blog/src/main/resources/templates/tags.html
@@ -10,7 +10,7 @@
 <body>
 
   <!--导航-->
-  <nav th:replace="_fragments :: menu(3)" class="ui inverted attached  m-padded-tb-mini m-shadow-small gird-header" >
+  <nav th:replace="_fragments :: menu(3)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small gird-header" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">Blog</h2>
