--- a/myblog-mybatis-master/src/main/resources/templates/index.html
+++ b/myblog-mybatis-master/src/main/resources/templates/index.html
@@ -102,6 +102,7 @@
 
 
 <!--最新推荐-->
+<!--
 <div class="ui m-padded-tb-large">
     <div class="ui m-container-small m-opacity">
         <div class="ui secondary segment " align="center">
@@ -119,23 +120,24 @@
         </div>
     </div>
 </div>
+-->
 
 
 <!--中间内容-->
-<div class="m-padded-tb-big animated fadeIn">
+<!--<div class="m-padded-tb-big animated fadeIn">
     <div class="ui container">
         <div class="ui stackable grid">
-            <!--博客内容-->
+            &lt;!&ndash;博客内容&ndash;&gt;
             <div class="ui vertical segment">
                 <div class="ui m-container-small m-opacity">
                     <div class="ui secondary segment " align="center">
                         <i class="bookmark icon"></i>最新文章
                     </div>
                 </div>
-                <!--博文列表-->
+                &lt;!&ndash;博文列表&ndash;&gt;
                 <div class="ui padded segment m-padded-tb-large m-opacity" th:each="blog : ${pageInfo.list}">
                     <div class="ui large aligned mobile reversed stackable grid">
-                        <!--博文信息-->
+                        &lt;!&ndash;博文信息&ndash;&gt;
                         <div class="eleven wide column ">
                             <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-title-font" th:text="${blog.title}">大圣，此去欲何?</a></h3>
                             <p class="m-text m-margin-top-max" th:text="|${blog.description}......|">戴上金箍，没法爱你；放下金箍，没法保护你。我知道上天不会给我第二次机会，曾经我们说好的永远，原来也仅仅只有，十二画，而已。“大圣，此去欲何?”“踏南天，碎凌霄。”“若一去不回……”“便一去不回” 其实很多时候，我们都是有机会的，最后真正放弃的，是我们自己。......</p>
@@ -162,7 +164,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--博文图片-->
+                        &lt;!&ndash;博文图片&ndash;&gt;
                         <div class="five wide column">
                             <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
                                 <img src="../static/images/backimg1.jpg" th:src="@{${blog.firstPicture}}"  alt="" class="ui rounded image">
@@ -172,7 +174,7 @@
                     </div>
                 </div>
             </div>
-            <!--分页-->
+            &lt;!&ndash;分页&ndash;&gt;
             <div class="ui bottom attached segment m-opacity stackable grid">
                 <div class="three wide column" align="center">
                     <a class="item" th:href="@{/(pageNum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}" th:unless="${pageInfo.isFirstPage}">上一页</a>
@@ -190,8 +192,142 @@
         </div>
     </div>
 
-</div>
+</div>-->
 
+<!--中间内容-->
+<div class="m-padded-tb-big animated fadeIn">
+    <div class="ui container">
+        <div class="ui stackable grid">
+            <!--左边博客列表-->
+            <div class="eleven wide column">
+                <!--header-->
+                <div class="ui top attached segment m-opacity">
+                    <div class="ui middle aligned two column grid">
+                        <div class="column">
+                            <h3 class="ui teal header">博客</h3>
+                        </div>
+                        <div class="right aligned column">
+                            共 <h2 class="ui orange header m-inline-block m-text-thin"> 14 </h2> 篇
+                        </div>
+                    </div>
+                </div>
+
+                <!--content-->
+                <div class="ui attached segment m-opacity">
+                    <div class="ui padded segment m-padded-tb-large m-opacity" th:each="blog : ${pageInfo.list}">
+                        <div class="ui middle aligned mobile reversed stackable grid" >
+                            <div class="eleven wide column">
+                                <h3 class="ui header" >
+                                    <a href="#"  th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}" >你真的理解什么是财富自由吗?</a></h3>
+                                <p class="m-text m-margin-top-max" th:text="|${blog.description}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                                <div class="ui grid">
+                                    <div class="eleven wide column">
+                                        <div class="ui mini horizontal link list">
+                                            <div class="item">
+                                                <img src="https://unsplash.it/100/100?image=1005"  th:src="${blog.avatar}" alt="" class="ui avatar image">
+                                                <div class="content"><a href="#" class="header" th:text="${blog.nickname}" >贺元</a></div>
+                                            </div>
+                                            <div class="item">
+                                                <i class="calendar icon"></i><span th:text="${blog.updateTime}">2017-10-01</span>
+                                            </div>
+                                            <div class="item">
+                                                <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="right aligned five wide column">
+                                        <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.typeName}">认知升级</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="five wide column">
+                                <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+                                    <img src="https://unsplash.it/800/450?image=1005"  th:src="@{${blog.firstPicture}}" alt="" class="ui rounded image">
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!--footer-->
+                <div class="ui bottom attached segment m-opacity stackable grid">
+                    <div class="three wide column" align="center">
+                        <a class="ui mini teal basic button" th:href="@{/(pageNum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}" th:unless="${pageInfo.isFirstPage}">上一页</a>
+                    </div>
+
+                    <div class="ten wide column" align="center">
+                        <p> <span th:text="${pageInfo.pageNum}"></span> / <span th:text="${pageInfo.pages}"></span> </p>
+                    </div>
+
+                    <div class="three wide column" align="center">
+                        <a class="ui mini teal basic button" th:href="@{/(pageNum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}" th:unless="${pageInfo.isLastPage}">下一页</a>
+                    </div>
+                </div>
+
+            </div>
+            <!--右边的top-->
+            <div class="five wide column">
+                <!--分类-->
+                <div class="ui segments m-opacity">
+                    <div class="ui secondary segment">
+                        <div class="ui two column grid">
+                            <div class="column">
+                                <i class="idea icon"></i>分类
+                            </div>
+                            <div class="right aligned column">
+                                <a href="#" th:href="@{types/-1}" target="_blank">more <i class="angle double right icon"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui teal segment">
+                        <div class="ui fluid vertical menu">
+                            <a href="#"  target="_blank" class="item">
+                                <span>学习日志</span>
+                                <div class="ui teal basic left pointing label">13</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--标签-->
+                <div class="ui segments m-margin-top-large m-opacity">
+                    <div class="ui secondary segment">
+                        <div class="ui two column grid">
+                            <div class="column">
+                                <i class="tags icon"></i>标签
+                            </div>
+                            <div class="right aligned column">
+                                <a href="#" target="_blank">more <i class="angle double right icon"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui teal segment">
+                        <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny" >
+                            <span>方法论</span> <div class="detail">23</div>
+                        </a>
+                    </div>
+                </div>
+
+                <!--最新推荐-->
+                <div class="ui segments m-margin-top-large m-opacity">
+                    <div class="ui secondary segment ">
+                        <i class="bookmark icon"></i>最新推荐
+                    </div>
+                    <div class="ui segment" th:each="blog : ${recommendBlogs}">
+                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-text-thin" th:text="${blog.title}">用户故事（User Story）</a>
+                    </div>
+                </div>
+
+                <!--二维码-->
+                <h4 class="ui horizontal divider header m-margin-top-large">扫码关注我</h4>
+                <div class="ui centered card" style="width:11em">
+                    <img th:src="@{/images/wechat.jpg}" alt="" class="ui rounded image" >
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--置顶图标-->
 <div id="toolbar" class="m-padded-tb-large m-fixed m-right-bottom" style="display: none">
